US5903 - DDK Foundation Add top margin to footer to fix spacing between content of page and footer globally.

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: $footer-background;
   padding: 2em 0;
+  margin-top: 2em;
 
   .footer-list {
     margin-bottom: 1em;
